--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
