--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
